--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -11,10 +11,10 @@
       table tr { display: block; }
       .visualizar,
       .visualizar a {  color: #000;  font-family: Arial, Helvetica, Sans serif;  font-size: 11px;  }
-      .box { margin:40px 0 0 60px !important; width: 475px;}
+      .box { margin:40px 0 0 60px; width: 475px;}
       
       .box h2 { text-transform:uppercase; color:#fff; text-align:center; font-size: 18px; margin-bottom:0;}
-      .box span { background:url(img/divisao.png) repeat-x; height:7px; margin:0 auto; display:block; width:300px; }
+      .box span { background:url(img/divisao.png) repeat-x; height:7px; margin:0 auto; display:block; width:400px; }
       .box ul a,
       .box p { color:#fff;}
       .box p { margin:10px 0; font-size:15px;}
@@ -26,7 +26,7 @@
       .box li img { margin-right:0; margin-bottom:2px; border:3px solid #f7f1f1; border-radius:3px; -moz-border-radius: 3px; -webkit-border-radius: 3px;  }
       .box li a { display:block; text-align:center; font-size:14px; text-decoration:none; }
       .box li a:hover { text-decoration:underline; }
-      .globo { margin-top:60px; margin-left:83px; }
+      .globo { margin-top:40px; margin-left:85px; }
       .globo h2,
       .globo p,
       .globo a { color:#000; }
@@ -44,18 +44,21 @@
       .paiol  { width:443px; padding:0; margin:70px 0 0 80px; }
       .paiol h2  { width:440px; }
       .paiol p {  width:240px; float:left; margin:10px 0 0 0;  }
-      .licenciado { margin:118px 0 0 67px;    padding: 0;    width: 188px; float:left; }
+      .licenciado { margin:118px 0 0 67px;    padding: 0;    width: 200px; float:left; }
+      .licenciado span,
+      .licenciado td {width:200px;}
       .licenciado p { margin-top:5px; }
       .abrin { margin:138px 0 0 62px;    padding: 0;    width: 230px; float:left; }
+      .abrin td,
+      .abrin span { width:230px; }
       .telinha { width: 600px; height:591px; margin-top:400px;  }
-      .rodape { background:url(img/bg-rodape.jpg) repeat-x; width: 600px; height:125px; margin-top:16px; }
+      .rodape { background:url(img/bg-rodape.jpg) repeat-x; width: 600px; height:125px; margin-top:16px; float:left; }
       .rodape a,
       .rodape p { color:#fff; font-size:14px; }
       .rodape p { margin:20px 0 0 20px; width:330px; float:left; }
       .rodape .bold { font-size:10px; font-weight:bold; text-transform:uppercase; }
       .rodape .tv { width:87px; height:76px; display:block; float:right; margin:20px 20px 0 0; }
-      td h2,
-      tr, td  { margin:0 !important; padding:0 !important; }
+      
       td { float:left; }
       .visualizar { *margin-bottom:-20px }
     </style>
