--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -11,7 +11,7 @@
       table tr { display: block; }
       .visualizar,
       .visualizar a {  color: #000;  font-family: Arial, Helvetica, Sans serif;  font-size: 11px;  }
-      .box { margin:40px 0 0 60px; width: 475px;}
+      .box { margin:40px 0 0 60px; width: 475px; float:left;}
       
       .box h2 { text-transform:uppercase; color:#fff; text-align:center; font-size: 18px; margin-bottom:0;}
       .box span { background:url(img/divisao.png) repeat-x; height:7px; margin:0 auto; display:block; width:400px; }
