--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -52,7 +52,7 @@
       .abrin td,
       .abrin span { width:230px; }
       .telinha { width: 600px; height:591px; margin-top:400px;  }
-      .rodape { background:url(img/bg-rodape.jpg) repeat-x; width: 600px; height:125px; margin-top:16px; float:left; }
+      .rodape { background:url(img/bg-rodape.jpg) repeat-x; width: 600px; height:125px; float:left; }
       .rodape a,
       .rodape p { color:#fff; font-size:14px; }
       .rodape p { margin:20px 0 0 20px; width:330px; float:left; }
