--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -59,7 +59,7 @@
       .rodape .bold { font-size:10px; font-weight:bold; text-transform:uppercase; }
       .rodape .tv { width:87px; height:76px; display:block; float:right; margin:20px 20px 0 0; }
       td { float:left; }
-      .box { *margin-left:100px; }
+      .box { *margin-left:100px !important; }
       .box ul li { *float:left; *width:80px !important; *overflow:hidden; }
       
     </style>
