--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -12,7 +12,7 @@
       .visualizar,
       .visualizar a {  color: #000;  font-family: Arial, Helvetica, Sans serif;  font-size: 11px;  }
       .box { margin:40px 0 0 60px; width: 475px; float:left;}
-      .box td { width:475px; }
+      
       .box h2 { text-transform:uppercase; color:#fff; text-align:center; font-size: 18px; margin-bottom:0;}
       .box span { background:url(img/divisao.png) repeat-x; height:7px; margin:0 auto; display:block; width:400px; }
       .box ul a,
@@ -59,8 +59,8 @@
       .rodape .bold { font-size:10px; font-weight:bold; text-transform:uppercase; }
       .rodape .tv { width:87px; height:76px; display:block; float:right; margin:20px 20px 0 0; }
       td { float:left; }
-      .box td{ *margin-left:200px !important; }
-      .box ul li { *float:left; *width:100px !important; *overflow:hidden; }
+      .box { *margin-left:200px !important; }
+      .box ul li { *float:left; *width:150px !important; *overflow:hidden; }
       
     </style>
   </head>
