--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -61,6 +61,7 @@
       td { float:left; }
       .box { *margin-left:200px !important; }
       .box ul li { *float:left; *width:150px !important; *overflow:hidden; }
+      .box span { *margin-left:100px; }
       
     </style>
   </head>
