--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -59,8 +59,8 @@
       .rodape .bold { font-size:10px; font-weight:bold; text-transform:uppercase; }
       .rodape .tv { width:87px; height:76px; display:block; float:right; margin:20px 20px 0 0; }
       td { float:left; }
-      .box { *margin-left:200px !important; }
-      .box ul li { *float:left; *width:150px !important; *overflow:hidden; }
+      .box { *margin-top:20px; }
+      .box ul li { *float:left; *width:200px !important; *overflow:hidden; }
       .box span { *margin-left:100px; }
       
     </style>
