--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -55,6 +55,7 @@
       td { float:left; }
       .box ul p { margin:0; }
       
+      table { *background-position: 0 200px; }
       .box ul li { *float:left; *width:200px !important; *overflow:hidden; }
       .box span { *margin-left:100px; }
       .visualizar { *margin-bottom:-20px; }
