--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -18,6 +18,7 @@
       .box ul a,
       .box p { color:#fff;}
       .box p { margin:10px 0; font-size:15px;}
+      .box p img { width:89px; }
       .box img { float:left; margin-right:10px; }
       .box img { width:100px; }
       .globo { margin-top:230px; margin-left:85px; }
