--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -60,6 +60,7 @@
       .box ul li { *float:left; *width:200px !important; *overflow:hidden; }
       .box span { *margin-left:100px; }
       .visualizar { *margin-bottom:-20px; }
+      .box p { float:left; }
       
     </style>
   </head>
