--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -60,7 +60,8 @@
       .box ul li { *float:left; *width:200px !important; *overflow:hidden; }
       .box span { *margin-left:100px; }
       .visualizar { *margin-bottom:-20px; }
-      .box p { float:left; }
+      .box .grade { *float:left; *width:400px !important;  }
+      .box .grade img { *float:left; }
       
     </style>
   </head>
@@ -76,7 +77,7 @@
             <td>
               <h2>grade de Programação tv cultura 2013</h2>
               <span></span>
-              <p><img src="http://cmais.com.br/newsletter/cocorico/043013/img/logotv.png" alt="TV Cultura" />Saiu a grade de programação 2013 da TV Cultura e a criançada ganhou atenção especial. São quatro atrações especialmente para o público infantil, além de uma série para adolescentes. A nova grade conta agora com:</p>
+              <p class="grade"><img src="http://cmais.com.br/newsletter/cocorico/043013/img/logotv.png" alt="TV Cultura" />Saiu a grade de programação 2013 da TV Cultura e a criançada ganhou atenção especial. São quatro atrações especialmente para o público infantil, além de uma série para adolescentes. A nova grade conta agora com:</p>
               
             </td>
           </tr>
