--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -18,7 +18,8 @@
       .box ul a,
       .box p { color:#fff;}
       .box p { margin:10px 0; font-size:15px;}
-      .box p img { width:89px; }
+      .box .grade { float:left; width:475px !important;  }
+      .box .grade img { float:left; width:89px; }
       .box img { float:left; margin-right:10px; }
       .box img { width:100px; }
       .globo { margin-top:230px; margin-left:85px; }
@@ -60,8 +61,7 @@
       .box ul li { *float:left; *width:200px !important; *overflow:hidden; }
       .box span { *margin-left:100px; }
       .visualizar { *margin-bottom:-20px; }
-      .box .grade { *float:left; *width:400px !important;  }
-      .box .grade img { *float:left; }
+      
       
     </style>
   </head>
