--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -60,7 +60,7 @@
       table { *background-position: 40px 180px; }
       .box span { *margin-left:100px; }
       .visualizar { *margin-bottom:-20px; }
-      .box .grade { *margin-left:40px !important; }
+      .box { *margin-left:100px !important; }
       
       
     </style>
