--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -62,6 +62,7 @@
       .visualizar { *margin-bottom:-30px; }
       .box { *margin-top:-20px !important; }
       .box .grade { *margin-left:60px !important; *float:left; }
+      .globo { *margin:150px 0 0 40px !important; }
       
       
     </style>
