--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -60,7 +60,7 @@
       table { *background-position: 40px 190px; }
       .box span { *margin-left:100px; }
       .visualizar { *margin-bottom:-30px; }
-      .box { *margin-top:-20px !important; }
+      .box { *margin-top:-20px !important; *height:340px; }
       .box .grade { *margin-left:60px !important; *float:left; }
       .globo { *margin:150px 0 0 40px !important; }
       
