--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -62,7 +62,7 @@
       .visualizar { *margin-bottom:-30px; }
       .box { *margin-top:-20px !important; *height:340px; }
       .box .grade { *margin-left:60px !important; *float:left; }
-      .globo td { *margin:150px 0 0 40px !important; }
+      .globo h2 { *margin:150px 0 0 40px !important; }
       
       
     </style>
