--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -62,7 +62,8 @@
       .visualizar { *margin-bottom:-30px; }
       .box { *margin-top:-20px !important; *height:340px; }
       .box .grade { *margin-left:60px !important; *float:left; }
-      .globo h2 { *margin:50px 0 0 60px !important; }
+      .globo h2 { *margin:50px 0 0 80px !important; }
+      .globo p { *margin-left:60px; }
       
       
     </style>
