--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -63,7 +63,7 @@
       .box { *margin-top:-20px !important; *height:340px; }
       .box .grade { *margin-left:60px !important; *float:left; }
       .globo h2 { *margin:50px 0 0 80px !important; }
-      .globo p { *margin-left:100px; }
+      .globo p { *margin-left:90px; }
       
       
     </style>
@@ -124,7 +124,7 @@
             </td>
           </tr>
           <tr class="telinha">
-            <td  style="line-height: 0pt"><img src="http://cmais.com.br/newsletter/cocorico/043013/img/telinha.png" alt="Cocoricó sempre na telinha!" /></td>
+            <td><img src="http://cmais.com.br/newsletter/cocorico/043013/img/telinha.png" alt="Cocoricó sempre na telinha!" /></td>
           </tr>
           <tr class="rodape">
             <td>
