--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -62,6 +62,7 @@
       .visualizar { *margin-bottom:-30px; }
       .box { *margin-top:-20px !important; *height:340px; }
       .box .grade { *margin-left:60px !important; *float:left; }
+      .globo { *height:200px; }
       .globo h2 { *margin:50px 0 0 80px !important; }
       .globo p { *margin-left:90px; }
       
