--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -18,8 +18,8 @@
       .box ul a,
       .box p { color:#fff;}
       .box p { margin:10px 0; font-size:15px;}
-      .grade p { float:left; width:475px !important;  }
-      .grade p img { float:left; width:89px; }
+      .box .grade p { float:left; width:475px !important;  }
+      .box .grade p img { float:left; width:89px; }
       .box img { float:left; margin-right:10px; }
       .box img { width:100px; }
       .globo { margin-top:230px; margin-left:85px; }
@@ -61,7 +61,7 @@
       .box span { *margin-left:100px; }
       .visualizar { *margin-bottom:-30px; }
       .box { *margin-top:-20px !important; *height:440px; }
-      .grade p { *margin-left:60px !important; *float:left; }
+      .box .grade p { *margin-left:60px !important; *float:left; }
       .globo { *height:200px; *margin-top:100px !important; }
       .globo h2 { *margin:50px 0 0 80px !important; }
       .globo p { *margin-left:90px; }
