--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -18,8 +18,8 @@
       .box ul a,
       .box p { color:#fff;}
       .box p { margin:10px 0; font-size:15px;}
-      .box .grade p { float:left; width:475px !important;  }
-      .box .grade p img { float:left; width:89px; }
+      .box .grade { float:left; width:475px !important;  }
+      .box .grade img { float:left; width:89px; }
       .box img { float:left; margin-right:10px; }
       .box img { width:100px; }
       .globo { margin-top:230px; margin-left:85px; }
@@ -61,7 +61,7 @@
       .box span { *margin-left:100px; }
       .visualizar { *margin-bottom:-30px; }
       .box { *margin-top:-20px !important; *height:440px; }
-      .box .grade p { *margin-left:60px !important; *float:left; }
+      .box .grade { *margin-left:60px !important; *float:left; }
       .globo { *height:200px; *margin-top:100px !important; }
       .globo h2 { *margin:50px 0 0 80px !important; }
       .globo p { *margin-left:90px; }
@@ -77,11 +77,11 @@
           <tr>
             <td><img src="http://cmais.com.br/newsletter/cocorico/043013/img/topo.png" border="0"/></td>
           </tr>
-          <tr class="box grade">
+          <tr class="box">
             <td>
               <h2>grade de Programação tv cultura 2013</h2>
               <span></span>
-              <p><img src="http://cmais.com.br/newsletter/cocorico/043013/img/logotv.png" alt="TV Cultura" />Saiu a grade de programação 2013 da TV Cultura e a criançada ganhou atenção especial. São quatro atrações especialmente para o público infantil, além de uma série para adolescentes. A nova grade conta agora com:</p>
+              <p class="grade"><img src="http://cmais.com.br/newsletter/cocorico/043013/img/logotv.png" alt="TV Cultura" />Saiu a grade de programação 2013 da TV Cultura e a criançada ganhou atenção especial. São quatro atrações especialmente para o público infantil, além de uma série para adolescentes. A nova grade conta agora com:</p>
               
             </td>
           </tr>
