--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -59,7 +59,7 @@
       
       table { *background-position: 40px 190px; }
       .box span { *margin-left:100px; }
-     
+      .visualizar { *margin-bottom:20px; }
       .box { *margin-top:-20px !important; *height:340px; }
       .box .grade { *margin-left:60px !important; *float:left; }
       .globo { *height:200px; *margin-top:100px !important; }
