--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -56,14 +56,14 @@
       .rodape .tv { width:87px; height:76px; display:block; float:right; margin:20px 20px 0 0; }
       td { float:left; }
       .box ul p { margin:0; }
-      table { *background-position: 40px 150px; }
+      table { *background-position: 40px 170px; }
       .box span { *margin-left:100px; }
       .box { *margin-top:-100px !important; *height:340px; }
       .box .grade { *margin-left:60px !important; *float:left; }
       .globo { *height:200px; *margin-top:100px !important; }
       .globo h2 { *margin:50px 0 0 80px !important; }
       .globo p { *margin-left:90px; }
-      
+      .box.programacao { margin-top:-20px; }
       
     </style>
   </head>
@@ -75,7 +75,7 @@
           <tr>
             <td><img src="http://cmais.com.br/newsletter/cocorico/043013/img/topo.png" border="0"/></td>
           </tr>
-          <tr class="box">
+          <tr class="box programacao">
             <td>
               <h2>grade de Programação tv cultura 2013</h2>
               <span></span>
