--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -63,7 +63,7 @@
       .globo { *height:200px; *margin-top:100px !important; }
       .globo h2 { *margin:50px 0 0 80px !important; }
       .globo p { *margin-left:90px; }
-      .box.programacao { *margin-top:-20px; }
+      .box.programacao { *margin-top:-20px !important; }
       
     </style>
   </head>
