--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -72,7 +72,7 @@
       <p class="visualizar">Caso não consiga visualizar este email, <a href="http://cmais.com.br/newsletter/cocorico/043013/index.html" title="clique aqui">clique aqui.</a></p>
       <table border="0" cellspacing="0" cellpadding="0">
         <tbody>
-          <tr>
+          <tr style="width:600px; height:234px;">
             <td><img src="http://cmais.com.br/newsletter/cocorico/043013/img/topo.png" border="0"/></td>
           </tr>
           <tr class="box programacao">
