--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -58,12 +58,12 @@
       .box ul p { margin:0; }
       table { *background-position: 40px 150px; }
       .box span { *margin-left:100px; }
-      .box { *margin-top:-100px !important; *height:340px; }
+      .box { *margin-top:-100px !important;  }
       .box .grade { *margin-left:60px !important; *float:left; }
       .globo { *height:200px; *margin-top:100px !important; }
       .globo h2 { *margin:50px 0 0 80px !important; }
       .globo p { *margin-left:90px; }
-      .box.programacao { *margin-top:-100px !important; }
+      .box.programacao { *margin-top:-100px !important; *height:340px; *width:475px; }
       
     </style>
   </head>
