--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -47,7 +47,7 @@
       .abrin { margin:138px 0 0 47px;    padding: 0;    width: 230px; float:left; }
       .abrin td,
       .abrin span { width:230px; }
-      .telinha { width: 600px; height:591px; margin-top:400px;  }
+      .telinha { width: 600px; height:591px; margin-top:100px; float:left;  }
       .rodape { background:url(http://cmais.com.br/newsletter/cocorico/043013/img/bg-rodape.jpg) repeat-x; width: 600px; height:125px; float:left; }
       .rodape a,
       .rodape p { color:#fff; font-size:14px; }
