--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -135,8 +135,8 @@
         </tbody>
       </table>
       <map name="Map">
-        <area shape="rect" coords="532,498,585,537" href="https://twitter.com/tvcultura">
-        <area shape="rect" coords="533,454,586,493" href="http://www.facebook.com/cocoricooficial?fref=ts">
+        <area shape="rect" coords="532,498,585,537" href="https://twitter.com/tvcultura" title="Twitter">
+        <area shape="rect" coords="533,454,586,493" href="http://www.facebook.com/cocoricooficial?fref=ts" title="Facebook">
       </map>
     </div>
     
