--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -63,7 +63,7 @@
       .globo h2 { *margin:50px 0 0 80px !important; }
       .globo p { *margin-left:90px; }
       .box.programacao { *position:relative; *top:20px; }
-      
+      .topo { *width:600px; *height:234px; *margin-bottom:-100px; *float:left;}
     </style>
   </head>
   <body>
