--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -64,6 +64,8 @@
       .globo p { *margin-left:90px; }
       .box.programacao { *position:relative; *top:20px; }
       .topo { *width:600px; *height:234px; *margin-bottom:-100px; *float:left;}
+      .box.glogo { *position:relative; *top:20px; }
+   
     </style>
   </head>
   <body>
