--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -62,9 +62,11 @@
       .globo { *height:200px; *margin-top:100px !important; }
       .globo h2 { *margin:50px 0 0 80px !important; }
       .globo p { *margin-left:90px; }
-      .box.programacao { *position:relative; *top:20px; }
+      .box.programacao,
+      .box.globo { *position:relative; }
+      .box.programacao { *top:20px; }
       .topo { *width:600px; *height:234px; *margin-bottom:-100px; *float:left;}
-      .box.glogo { *position:relative; *top:20px; }
+      .box.glogo { *top:200px; }
    
     </style>
   </head>
