--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -66,7 +66,7 @@
       .box.globo { *position:relative; }
       .box.programacao { *top:20px; }
       .topo { *width:600px; *height:234px; *margin-bottom:-100px; *float:left;}
-      .box.glogo { *top:400px; }
+      .box.globo { *top:400px; }
    
     </style>
   </head>
