--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -62,11 +62,16 @@
       .globo { *height:200px; *margin-top:100px !important; }
       .globo h2 { *margin:50px 0 0 80px !important; }
       .globo p { *margin-left:90px; }
-      .box.programacao,
-      .box.globo { *position:relative; }
+      .box.box { *position:relative; }
       .box.programacao { *top:20px; }
       .topo { *width:600px; *height:234px; *margin-bottom:-100px; *float:left;}
-      .box.globo { *top:400px; }
+      .box.globo { *top:200px; }
+      .box.classicos { *top:400px; }
+      .box.paiol { *top:600px; }
+      .box.licenciado { *top:800px; }
+      .box.abrin { *top:1000px; }
+      .box.telinha { *top:1200px; }
+      
    
     </style>
   </head>
