--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -66,7 +66,7 @@
       .box.programacao { *top:20px; }
       .topo { *width:600px; *height:234px; *margin-bottom:-100px; *float:left;}
       .box.globo { *top:170px; }
-      .box.classicos { *top:195px; }
+      .box.classicos { *top:195px; width: 400px; }
       .box.paiol { *top:600px; }
       .box.licenciado { *top:800px; }
       .box.abrin { *top:1000px; }
