--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -66,7 +66,9 @@
       .box.programacao { *top:20px; }
       .topo { *width:600px; *height:234px; *margin-bottom:-100px; *float:left;}
       .box.globo { *top:170px; }
-      .box.classicos { *top:195px; *width: 300px !important; *right:50px; }
+      .box.classicos { *top:195px; *width: 300px !important; *right:60px; }
+      .box.classicos span,
+      .box.classicos h2 { *margin:0 }
       .box.paiol { *top:600px; }
       .box.licenciado { *top:800px; }
       .box.abrin { *top:1000px; }
