--- a/web/portal/tvratimbum/realidadeaumentada/index.html
+++ b/web/portal/tvratimbum/realidadeaumentada/index.html
@@ -9,7 +9,7 @@
 	margin:0;
 	padding:0;
 	overflow:hidden;
-	background-color: #000;
+	background-color: #fffff;
 }
 		#flashContent { width:100%; height:100%; }
 		</style>
