--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -67,7 +67,7 @@
       .topo { *width:600px; *height:234px; *margin-bottom:-100px; *float:left;}
       .box.globo { *top:170px; }
       .box.classicos { *top:195px; *right:80px; }
-      .box.classicos span { *margin:0;  float:right; }
+      .box.classicos span { *margin:0;  *float:right; *margin-right:20px;  }
       .box.classicos h2 { *margin:0 }
       .box.paiol { *top:600px; }
       .box.licenciado { *top:800px; }
