--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -68,7 +68,7 @@
       .box.globo { *top:170px; }
       .box.classicos { *top:195px; *right:80px; }
       .box.classicos span { *margin:0;  *float:right; *margin-right:20px;  }
-      .box.classicos h2 { *margin:0 }
+      .box.classicos h2 { *margin:0 0 0 50px; }
       .box.paiol { *top:600px; }
       .box.licenciado { *top:800px; }
       .box.abrin { *top:1000px; }
