--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -56,7 +56,7 @@
       .rodape .tv { width:87px; height:76px; display:block; float:right; margin:20px 20px 0 0; }
       .box ul p { margin:0; }
       
-      table { *background-position: 40px 150px; *position:absolute; margin-left:0; }
+      table { *background-position: 40px 150px; *position:absolute; }
       .box span { *margin-left:100px; }
       .box { *margin-top:-100px !important;  }
       .box .grade { *margin-left:60px !important; *float:left; }
