--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -43,38 +43,38 @@
       <table border="0" cellspacing="0" cellpadding="0">
         <tbody>
           <tr>
-            <td><img src="img/img1.png" border="0" width="600" height="253"></td>
+            <td><img src="http://cmais.com.br/newsletter/cocorico/043013/img/img1.png" border="0" width="600" height="253"></td>
           </tr>
           <tr class="grade">
-            <td><img src="img/img2.png" border="0">
+            <td><img src="http://cmais.com.br/newsletter/cocorico/043013/img/img2.png" border="0">
             <h2>GRADE DE PROGRAMAÇÃO TV CULTURA 2013</h2>
             <p>Saiu a grade de programação 2013 da TV Cultura e a criançada ganhou atenção especial. São quatro atrações especialmente para o público infantil, além de uma série para adolescentes. A nova grade conta agora com:</p>     
             </td>
           </tr>
           <tr class="globo">
             <td>
-              <img src="img/img3.png" border="0">
+              <img src="http://cmais.com.br/newsletter/cocorico/043013/img/img3.png" border="0">
               <h2>COCORICÓ NA GLOBO INTERNACIONAL</h2>
               <p>A Turma do Paiol tirou o passaporte. Numa parceria com a rede Globo, o Cocoricó e o "Castelo Rá-Tim-Bum" começam a fazer parte da grade da Globo Internacional. Em contrapartida, a Cultura leva ao ar, a partir de julho, o "Sítio do Picapau Amarelo".</p>
             </td>
           </tr>
           <tr class="classicos">
             <td>
-              <img src="img/img4.png" border="0">
+              <img src="http://cmais.com.br/newsletter/cocorico/043013/img/img4.png" border="0">
               <h2>COCORICÓ CONTA CLÁSSICOS</h2>
               <p>A partir de julho, a Cultura exibe "Cocoricó Conta Clássicos", adaptações de contos de fadas e outras conhecidas histórias infantis, interpretadas pela turma do paiol, que viraram filme no ano passado.</p>
             </td>
           </tr>
           <tr class="pascoa">
             <td>
-              <img src="img/img5.png" border="0">
+              <img src="http://cmais.com.br/newsletter/cocorico/043013/img/img5.png" border="0">
               <h2>PÁSCOA NO PAIOL</h2>
               <p>A Páscoa da Turma do Paiol foi o maior sucesso com o novo DVD Cocoricó: “Os Avós e a Charada dos Ovos de Páscoa”. Para promover o lançamento dos ovos de Páscoa a Paramount fez uma ação nos pontos de venda das Lojas Americanas.</p>
             </td>
           </tr>
           <tr class="licenciado">
             <td>
-              <img src="img/img6.png" border="0">
+              <img src="http://cmais.com.br/newsletter/cocorico/043013/img/img6.png" border="0">
               <h2>NOVO LICENCIADO</h2>
               <p>E a família continua aumentando. A nova linha de produtos do Cocoricó não para de crescer, assim, gostaríamos de dar as boas-vindas ao mais novo licenciado da marca Cocoricó: Brinquedos Cardoso.</p>
               <h2 class="h2a">ABRIN 2013</h2>
@@ -83,7 +83,7 @@
           </tr>
           <tr class="rodape">
             <td>
-              <img src="img/img7.png" border="0" usemap="#Map">
+              <img src="http://cmais.com.br/newsletter/cocorico/043013/img/img7.png" border="0" usemap="#Map">
               
               <p>Para mais informações sobre licenciamento, fale com a nossa agente pelo e-mail contato@faresak.com.br ou pelos telefones (11) 2691-8561 e (11) 2893-5227.</p>
               <p class="copy">2013 &copy; TV CULTURA - FPA</p>
