--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -34,7 +34,7 @@
       .licenciado .pa { top: 45px; left: 325px; width: 220px; }
       .rodape p { bottom: 50px; left: 20px; width: 340px; } 
       .rodape .copy { bottom: 10px; left: 20px; width: 220px; font-size: 10px; font-weight: bold; }
-      .licenciado { margin:-5px 0; padding:0; border:0; display: block; }
+      .licenciado { padding:0; border:0; display: block; }
     </style>
   </head>
   <body>
