--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -92,7 +92,7 @@
           </tr>
         </tbody>
       </table>
-      <p class="visualizar">Para cancelar o recebimento <a href="#" title="clique aqui">clique aqui.</a></p>
+      <p class="visualizar">Caso não queira mais receber nossa newsletter, <a href="#" title="clique aqui">clique aqui.</a></p>
       <map name="Map">
         <area shape="rect" coords="468,465,563,552" href="https://tvcultura.cmais.com.br" title="TV Cultura">
         <area shape="rect" coords="532,332,585,371" href="https://twitter.com/tvcultura" title="Twitter">
