--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>cmais+ O portal de conteúdo da Cultura - C+ - Opinião</title>
     <style type="text/css">
-      body { padding: 0;  background:#fff url(http://cmais.com.br/newsletter/cocorico/043013/img/bg.jpg) repeat-x; font-family: "Myriad Pro", Helvetica, Arial, sans-serif;  }
+      body { padding: 0;  background:#fff url(http://cmais.com.br/newsletter/cocorico/043013/img/bg.jpg) repeat-x; font-family: Arial, sans-serif;  }
       .all { margin: 0 auto;  }
       table {  width:600px; }
       table tr td img { margin:0;  padding: 0; border: none; }
@@ -13,7 +13,7 @@
       .visualizar,
       .visualizar a {  color: #000;  font-family: Arial, Helvetica, Sans serif;  font-size: 11px;  }
       h2 { text-transform:uppercase; text-align:center; font-size: 18px;}
-      p { font-size: 15px;}
+      p { font-size: 14px;}
       table td { position:relative ; display: block; }
 
       td p,
