--- a/web/newsletter/cocorico/043013/index.html
+++ b/web/newsletter/cocorico/043013/index.html
@@ -45,7 +45,7 @@
           <tr>
             <td><img src="http://cmais.com.br/newsletter/cocorico/043013/img/img1.png" border="0" width="600" height="253"></td>
           </tr>
-          <tr class="grade" height="100">
+          <tr class="grade" >
             <td height="50"><img src="http://cmais.com.br/newsletter/cocorico/043013/img/img2.png" border="0"><h2>GRADE DE PROGRAMAÇÃO TV CULTURA 2013</h2><p>Saiu a grade de programação 2013 da TV Cultura e a criançada ganhou atenção especial. São quatro atrações especialmente para o público infantil, além de uma série para adolescentes. A nova grade conta agora com:</p></td>
           </tr>
           <tr class="globo">
