--- a/web/portal/tvratimbum/realidadeaumentada/raNoCamera.html
+++ b/web/portal/tvratimbum/realidadeaumentada/raNoCamera.html
@@ -4,11 +4,12 @@
 		<title>Realidade Aumentada</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<style type="text/css" media="screen">
-		html, body { height:100%; }
+		html, body { height:100%; background-color: #336699;}
 		body {
 	margin:0;
 	padding:0;
 	overflow:hidden;
+	background-color: #000;
 }
 		#flashContent { width:100%; height:100%; }
 		</style>
