--- a/web/portal/tvratimbum/realidadeaumentada/index.html
+++ b/web/portal/tvratimbum/realidadeaumentada/index.html
@@ -19,7 +19,7 @@
   
   
   <map name="Map">
-    <area shape="rect" coords="74,70,300,212" href="#" >
+    <area shape="rect" coords="74,70,300,212" href="../index.html" >
   </map>
 
   <map name="Map2">
