--- a/web/portal/tvratimbum/realidadeaumentada/index.html
+++ b/web/portal/tvratimbum/realidadeaumentada/index.html
@@ -7,7 +7,7 @@
     <div class="all" align="center">
       <table border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <a href="index2.html"> <td colspan="2"  style="line-height: 0pt"><p><img src="img/rtb01.jpg" width="1024" height="459"></p></td></a>
+         <td colspan="2"  style="line-height: 0pt"><p> <a href="index2.html"> <img src="img/rtb01.jpg" width="1024" height="459"></a></p></td>
         </tr>
         <tr>
           <td width="380"  style="line-height: 0pt"><img src="img/rtb02.jpg" width="380" height="308" border="0" usemap="#Map"></td>
@@ -28,4 +28,4 @@
     <area shape="rect" coords="26,171,599,270" href="#">
   </map>
 </body>
-      </html>
+</html>
