--- a/web/portal/tvratimbum/realidadeaumentada/index.html
+++ b/web/portal/tvratimbum/realidadeaumentada/index.html
@@ -23,7 +23,7 @@
   </map>
 
   <map name="Map2">
-    <area shape="rect" coords="120,55,312,114" href="#">
+    <area shape="rect" coords="120,55,312,114" href="markerRatimbum.jpg" target="_blank">
     <area shape="rect" coords="343,58,539,111" href="#">
     <area shape="rect" coords="26,171,599,270" href="#">
   </map>
