--- a/web/portal/tvratimbum/realidadeaumentada/index.html
+++ b/web/portal/tvratimbum/realidadeaumentada/index.html
@@ -18,7 +18,7 @@
     
   
   <map name="Map">
-    <area shape="rect" coords="74,70,300,212" href="markerRatimbum.jpg" >
+    <area shape="rect" coords="74,70,300,212" href="markerRatimbum.jpg" target="_blank">
   </map>
 
   <map name="Map2">
