--- a/web/doctorwho/primeiroaoquarto/episode_s2_e5.html
+++ b/web/doctorwho/primeiroaoquarto/episode_s2_e5.html
@@ -83,7 +83,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 	 </p>
       </td>
     <td width="160" height="90"><img src="images/s2_gallery/s2_ep5_gallery.jpg" width="160" height="90"></td>
-    <td width="455" valign="top"><h2>A ascen&ccedil;&atilde;o dos Cybermen (Parte 1 de uma est&oacute;ria em 2 partes)</h2>
+    <td width="455" valign="top"><h2>A ascens&atilde;o dos Cybermen (Parte 1 de uma est&oacute;ria em 2 partes)</h2>
       <p>
       	A TARDIS est&aacute; presa em uma Terra paralela, e Rose descobre que seu pai ainda
 est&aacute; vivo. Mas for&ccedil;as sinistras est&atilde;o trabalhando, e a sociedade brit&acirc;nica est&aacute;
