--- a/web/portal/tvratimbum/realidadeaumentada/instrucoesCamA.html
+++ b/web/portal/tvratimbum/realidadeaumentada/instrucoesCamA.html
@@ -51,7 +51,7 @@ function MM_preloadImages() { //v3.0
 	              <table width="650" border="0">
 	                <tr>
 	                  <td valign="top"><a href="markerRatimbum.jpg">CLIQUE AQUI E IMPRIMA SUA MARCA</a></td>
-	                  <td align="right"><a href="RealidadeAumentadaRTB.html"><img src="../backBubbleA.png" alt="" width="64" height="64" border="0" /></a></td>
+	                  <td align="right"><a href="http://tvratimbum.cmais.com.br/portal/tvratimbum/realidadeaumentada"><img src="../backBubbleA.png" alt="" width="64" height="64" border="0" /></a></td>
                     </tr>
                   </table>
                 <p>&nbsp;</p></td>
