--- a/web/portal/tvratimbum/realidadeaumentada/instrucoesCamB.html
+++ b/web/portal/tvratimbum/realidadeaumentada/instrucoesCamB.html
@@ -26,7 +26,7 @@ function MM_preloadImages() { //v3.0
 		  <table width="200" border="0" align="center">
 		    <tr>
 		      <td align="right"><p><img src="telaInstrB.jpg" alt="" width="640" height="480" border="0" usemap="#Map" /></p>
-		        <p><a href="RealidadeAumentadaRTB.html"><img src="../backBubbleA.png" alt="" width="64" height="64" border="0" /></a></p></td>
+		        <p><a href="http://tvratimbum.cmais.com.br/portal/tvratimbum/realidadeaumentada"><img src="../backBubbleA.png" alt="" width="64" height="64" border="0" /></a></p></td>
 	        </tr>
 	      </table>
 		</div>
