--- a/web/portal/tvratimbum/realidadeaumentada/instrucoesNoCam.html
+++ b/web/portal/tvratimbum/realidadeaumentada/instrucoesNoCam.html
@@ -42,7 +42,7 @@ function MM_swapImage() { //v3.0
 		  <table width="200" border="0" align="center">
 		    <tr>
 		      <td align="right"><p><img src="telaInstrNoCam.jpg" alt="" width="640" height="480" border="0" usemap="#Map" /></p>
-		        <p><a href="RealidadeAumentadaRTB.html"><img src="../backBubbleA.png" alt="" width="64" height="64" border="0" /></a><a href="RealidadeAumentadaRTB.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','../backBubbleB.png',1)"></a></p></td>
+		        <p><a href="http://tvratimbum.cmais.com.br/portal/tvratimbum/realidadeaumentada"><img src="../backBubbleA.png" alt="" width="64" height="64" border="0" /></a><a href="RealidadeAumentadaRTB.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','../backBubbleB.png',1)"></a></p></td>
 	        </tr>
 	      </table>
 		</div>
