--- a/web/portal/tvratimbum/realidadeaumentada/raCamera.html
+++ b/web/portal/tvratimbum/realidadeaumentada/raCamera.html
@@ -73,7 +73,7 @@ function MM_swapImage() { //v3.0
 	                </object>
 		            <!--<![endif]-->
 	              </object>
-	            <a href="RealidadeAumentadaRTB.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','../backBubbleB.png',1)"><img src="../backBubbleA.png" width="64" height="64" border="0" id="Image2" /></a> </p></td>
+	            <a href="http://tvratimbum.cmais.com.br/portal/tvratimbum/realidadeaumentada" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image2','','../backBubbleB.png',1)"><img src="../backBubbleA.png" width="64" height="64" border="0" id="Image2" /></a> </p></td>
 	        </tr>
 	      </table>
 		</div>
