--- a/web/portal/tvratimbum/realidadeaumentada/index_.html
+++ b/web/portal/tvratimbum/realidadeaumentada/index_.html
@@ -7,7 +7,7 @@
     <div class="all" align="center">
       <table border="0" cellspacing="0" cellpadding="0">
         <tr>
-         <td colspan="2"  style="line-height: 0pt"><p> <img src="img/rtb01.jpg" width="1024" height="459" border="0" usemap="#Map3"></p></td>
+         <td colspan="2"  style="line-height: 0pt"><p> <a href="index2.html"> <img src="img/rtb01.jpg" width="1024" height="459"></a></p></td>
         </tr>
         <tr>
           <td width="380"  style="line-height: 0pt"><img src="img/rtb02.jpg" width="380" height="308" border="0" usemap="#Map"></td>
@@ -15,19 +15,16 @@
         </tr>
       </table>
     </div>
+    
+  
+  <map name="Map">
+    <area shape="rect" coords="74,70,300,212" href="markerRatimbum.jpg" target="_blank">
+  </map>
+
   <map name="Map2">
     <area shape="rect" coords="120,55,312,114" href="http://store.apple.com/br" target="_blank">
     <area shape="rect" coords="343,58,539,111" href="https://play.google.com/store" target="_blank">
     <area shape="rect" coords="26,171,599,270" href="cards.pdf" target="_blank">
-  </map>
-
-  <map name="Map3">
-    <area shape="rect" coords="326,392,744,430" href="#">
-  </map>
-
-  <map name="Map">
-    <area shape="rect" coords="71,67,185,206" href="#">
-    <area shape="rect" coords="218,96,300,196" href="#">
   </map>
 </body>
 </html>
