--- a/web/portal/tvratimbum/realidadeaumentada/index.html
+++ b/web/portal/tvratimbum/realidadeaumentada/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <title>cmais+ O portal de conteúdo da Cultura - C+ - Opinião</title>
+    <title>cmais+ O portal de conteúdo da Cultura</title>
   </head>
   <body style="background-color:black">
     <div class="all" align="center">
@@ -16,8 +16,9 @@
       </table>
     </div>
   <map name="Map2">
-    <area shape="rect" coords="120,55,312,114" href="http://store.apple.com/br" target="_blank">
-    <area shape="rect" coords="343,58,539,111" href="https://play.google.com/store" target="_blank">
+    <area shape="rect" coords="120,55,312,114" href="https://itunes.apple.com/us/app/realidade-aumentada/id595974206?mt=8" target="_blank">
+    <area shape="rect" coords="343,58,539,111" href="https://play.google.com/store/apps/details?id=com.TVCultura.RaTimBumRA&feature=search_result#?t=
+W251bGwsMSwyLDEsImNvbS5UVkN1bHR1cmEuUmFUaW1CdW1SQSJd" target="_blank">
     <area shape="rect" coords="26,171,599,270" href="cards.pdf" target="_blank">
   </map>
 
@@ -27,7 +28,7 @@
 
   <map name="Map">
     <area shape="rect" coords="71,67,185,206" href="#">
-    <area shape="rect" coords="218,96,300,196" href="#">
+    <area shape="rect" coords="218,96,300,196" href="index2.html">
   </map>
 </body>
 </html>
