--- a/web/portal/tvratimbum/realidadeaumentada/index.html
+++ b/web/portal/tvratimbum/realidadeaumentada/index.html
@@ -27,7 +27,7 @@ W251bGwsMSwyLDEsImNvbS5UVkN1bHR1cmEuUmFUaW1CdW1SQSJd" target="_blank">
   </map>
 
   <map name="Map">
-    <area shape="rect" coords="71,67,185,206" href="#">
+    <area shape="rect" coords="71,67,185,206" href="http://www.cmais.com.br/portal/tvratimbum/realidadeaumentada/markerRatimbum.jpg" target="_blank">
     <area shape="rect" coords="218,96,300,196" href="index2.html">
   </map>
 </body>
