--- a/web/portal/tvratimbum/realidadeaumentada/index.html
+++ b/web/portal/tvratimbum/realidadeaumentada/index.html
@@ -25,6 +25,10 @@ W251bGwsMSwyLDEsImNvbS5UVkN1bHR1cmEuUmFUaW1CdW1SQSJd" target="_blank">
   <map name="Map3">
     <area shape="rect" coords="326,392,744,430" href="#">
   </map>
+  
+  <map name="Map4">
+    <area shape="rect" coords="100,87,185,206" href="http://www.cmais.com.br/portal/tvratimbum/realidadeaumentada/markerRatimbum.jpg">
+  </map>
 
   <map name="Map">
     <area shape="rect" coords="71,67,185,206" href="http://www.cmais.com.br/portal/tvratimbum/realidadeaumentada/markerRatimbum.jpg" target="_blank">
